# Tandem

./: README.md
design_main_window/: README.md  Tandem.dc.html  original-spec.md
docs/plans/: 2026-06-17-tandem-implementation.md
src/: api.js  app.js  audio.js  index.html  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src/assets/fonts/: fonts.css
